# internal/api/routes/systemd/models.go
@@ -4,6 +4,7 @@ type CreateSystemDModel struct {
 	ServiceName string `json:"serviceName"`
 	BaseDir  string `json:"baseDir"`
 	ExecCommand string `json:"execCommand"`
+	LibDir	bool `json:"libDir"`
 }
 type CreateSystemDResponseModel struct {
 	CreateSystemDModel `json:"createSystemDModel"`
